# cppbackend

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/precode/src/: main.cpp
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  json_loader.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/precode/src/: json_loader.cpp
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main  main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/precode/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main  main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  test.txt
sprint2/problems/command_line/solution/src/: app.cpp  app.h  boost_logger.h  http_server.cpp  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  players.cpp  players.h  request_handler.h
sprint2/problems/game_state/solution/src/: app.cpp  app.h  json_loader.cpp  model.cpp  model.h  players.h  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt  test.txt
sprint2/problems/join_game/solution/build-release/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
sprint2/problems/join_game/solution/src/: json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  players.cpp  players.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/precode/: my_logger.h
sprint2/problems/move_players/solution/src/: app.cpp  app.h  json_loader.cpp  json_loader.h  model.cpp  model.h  players.h  request_handler.cpp  request_handler.h  tagged.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: Dockerfile
sprint2/problems/time_control/solution/: CMakeLists.txt  test.txt
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/find_return/solution/: conanfile.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile  test.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt  test.txt
sprint3/problems/static_lib/solution/src/: app.cpp  app.h  loot_generator.cpp  loot_generator.h  model.cpp  players.cpp
sprint3/problems/tv/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt  default.txt
sprint4/problems/leave_game/solution/src/: app.cpp  app.h  boost_logger.h  connection_pool.cpp  connection_pool.h  json_loader.cpp  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  model_serialization.h  players.cpp  players.h  request_handler.cpp  request_handler.h  request_struct.h
sprint4/problems/leave_game/solution/tests/: state-serialization-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  test.txt
sprint4/problems/state_serialization/solution/build-debug/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
sprint4/problems/state_serialization/solution/src/: app.h  http_server.cpp  json_loader.h  main.cpp  model.cpp  model.h  model_serialization.h  players.cpp  players.h  request_handler.h
sprint4/problems/state_serialization/solution/tests/: state-serialization-tests.cpp
(+78 files in other folders)
